installed install? and fixed container overflow bug

--- a/public/stylesheets/sass/_layout.sass
+++ b/public/stylesheets/sass/_layout.sass
@@ -28,7 +28,6 @@ ul
   padding: 0
 
 #container
-  overflow: auto
   position: relative
   top: -50px
   width: 850px
