--- a/public/stylesheets/songfeedback.css
+++ b/public/stylesheets/songfeedback.css
@@ -335,7 +335,6 @@ ul {
   padding: 0; }
 
 #container {
-  overflow: auto;
   position: relative;
   top: -50px;
   width: 850px;
